@@ -1,4 +1,15 @@
+
 === Safari-110 ===
+
+2003-10-16  Darin Adler <darin@apple.com>
+
+        Reviewed by vicki. 
+
+	- fix buildit build failure 
+
+        * kwq/KWQScrollView.mm: 
+        (QScrollView::resizeContents):
+
 
 2003-10-15  Darin Adler  <darin@apple.com>
 
